Modify hexlet_ci_app.yml - removed 2 needs from build and added 1 to securities

--- a/.github/workflows/hexlet_ci_app.yml
+++ b/.github/workflows/hexlet_ci_app.yml
@@ -18,14 +18,13 @@ jobs:
       run: |
         make setup
     - name: Run lint
-      needs: Package set-up
       run: |
         make lint
     - name: Run tests
-      needs: Run lint
       run: |
         make test
   security:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
