--- a/.github/workflows/hexlet_ci_app.yml
+++ b/.github/workflows/hexlet_ci_app.yml
@@ -14,6 +14,7 @@ jobs:
         node-version: 18
         cache: 'npm'
     - run: npm ci
+    - run: npm test
     - name: Package set-up
       run: |
         make setup
